BUGFIX: remove weird second scrollbar when scrolling

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,8 @@ body {
 	color: #40805b;
 	font-weight: 300;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
+	overflow: hidden; // removes second scrollbar
+
 }
 
 a {
@@ -23,7 +25,7 @@ a:hover, a:focus {
 
 .most-top{
     width: 100%;
-    background: #40805b;
+    background: #386d4e;
     height: 65px;
 
     p{
@@ -88,7 +90,7 @@ article{
 	margin: 0 auto;
 	/* this flex are just for displaying placeholder. */
 	display: flex;
-	flex-flow: wrap
+	flex-flow: wrap;
 }
 
 
